--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<section class="hero is-light">
+<section id="main-hero" class="hero is-light">
     <div class="hero-body">
         <div class="container">
             <div class="column">
