--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,33 +7,24 @@
 
     <title>{{meta.title}} - Ichiharu</title>
     <!-- First-party libraries -->
-    <link rel="stylesheet" href="/vendor/ichiharu/app.css">
+    <link rel="stylesheet" href="/css/app.css">
+    <script src="/third_party/ichiharu/init.js"></script>
 
     <!-- Third-party libraries -->
-    <script>if (typeof module === 'object') { window.module = module; module = undefined; }; </script>
-    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/third_party/jquery/jquery.min.js"></script>
 
-    <script src="/vendor/turbolinks/turbolinks.js"></script>
+    <link rel="stylesheet" href="/third_party/bulma/bulma.min.css">
+    <script defer src="/third_party/bulma/navbar.js"></script>
 
-    <link rel="stylesheet" href="/vendor/nprogress/nprogress.css">
-    <script src="/vendor/nprogress/nprogress.js"></script>
-    <script src="/vendor/ichiharu/init.js"></script>
+    <script src="/third_party/turbolinks/turbolinks.js"></script>
+
+    <link rel="stylesheet" href="/third_party/nprogress/nprogress.css">
+    <script src="/third_party/nprogress/nprogress.js"></script>
     <script>
         NProgress.start()
     </script>
 
-    <script defer src="/vendor/moji/navbar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"></script>
-
-    <link rel="stylesheet" href="/vendor/moji/moji.min.css">
-    {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js"></script> --}}
-    {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script> --}}
-    
-    <script>if (window.module) module = window.module;</script>
-
-    <link
-        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
