--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
-                <img src="/static/logo/logo.png">
+                <img src="/static/logo/logo-light.png">
                 {{!-- <span class="is-family-secondary has-text-weight-semibold has-text-grey-darker">Koukyo コウキョ</span> --}}
             </a>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
