--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,11 @@
-<section id="main-hero" class="hero is-light">
+<section id="main-hero" class="hero is-black">
     <div class="hero-body">
         <div class="container">
             <div class="column">
-                <h1 class="title">Web template</h1>
+                <h1 class="title">TanukiWorks Boilerplate</h1>
+                <p class="subtitle has-text-grey">Made with <span class="has-text-danger"><i
+                        class="fas fa-heart"></i></span> by <a class="has-text-grey-light"
+                    href="https://github.com/TanukiHQ" target="_blank">TanukiHQ</a></p>
             </div>
         </div>
     </div>
@@ -10,7 +13,10 @@
 
 <section class="section">
     <div class="container">
-        <h1 class="title">Hello world!</h1>
-        <p>This is some paragraph texts.</p>
+        <h1 class="title"><a href="https://github.com/TanukiHQ/Tanuki-Node-Boilerplate">Tanuki-Node-Boilerplate</a></h1>
+        <p>This repository is used for TanukiHQ and TanukiWorks projects. Now open-sourced!</p>
+        <p>Licensed under MPL-2.0. Check <code>LICENSE</code> for more information.</p>
+        <br>
+        <p class="has-text-weight-medium"><a href="https://github.com/TanukiHQ/Tanuki-Node-Boilerplate/generate"><i class="fas fa-code-branch"></i>&nbsp;Use</a> this repository as template for your project.</p>
     </div>
 </section>
