--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,36 +5,41 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{{meta.title}} - Ichiharu</title>
+    <title>{{meta.title}} - TanukiWorks Boilerplate</title>
     <!-- First-party libraries -->
     <link rel="stylesheet" href="/css/app.css">
-    <script src="/third_party/ichiharu/init.js"></script>
+    <script src="/js/app.js"></script>
+
+    <!-- Bulma Framework -->
+    <link rel="stylesheet" href="/third_party/bulma/bulma.min.css">
 
     <!-- Third-party libraries -->
     <script src="/third_party/jquery/jquery.min.js"></script>
-
-    <link rel="stylesheet" href="/third_party/bulma/bulma.min.css">
-    <script defer src="/third_party/bulma/navbar.js"></script>
+    <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet">
 
     <script src="/third_party/turbolinks/turbolinks.js"></script>
-
-    <link rel="stylesheet" href="/third_party/nprogress/nprogress.css">
-    <script src="/third_party/nprogress/nprogress.js"></script>
     <script>
-        NProgress.start()
-    </script>
+        Turbolinks.start()
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"></script>
+        $(document).on('turbolinks:before-cache turbolinks:before-render', function () {
+            return $('main').fadeOut('fast');
+        });
+        $(document).on('turbolinks:load', function () {
+            return $('main').fadeIn('fast');
+        });
+    </script>
 </head>
 
 <body>
     {{>navbar}}
 
-    {{{body}}}
-</body>
+    <main style="display: none;">
+        {{{body}}}
+    </main>
 
-{{#if meta.path}}
-<script defer src="/js/{{meta.path}}.js"></script>
-{{/if}}
+    {{>footer}}
+
+    {{>noscript_modal}}
+</body>
 
 </html>
