--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,10 +13,10 @@
 
 <section class="section">
     <div class="container">
-        <h1 class="title"><a href="https://github.com/TanukiHQ/Tanuki-Node-Boilerplate">Tanuki-Node-Boilerplate</a></h1>
+        <h1 class="title"><a target="_blank" href="https://github.com/TanukiHQ/Tanuki-Node-Boilerplate">Tanuki-Node-Boilerplate</a></h1>
         <p>This repository is used for TanukiHQ and TanukiWorks projects. Now open-sourced!</p>
         <p>Licensed under MPL-2.0. Check <code>LICENSE</code> for more information.</p>
         <br>
-        <p class="has-text-weight-medium"><a href="https://github.com/TanukiHQ/Tanuki-Node-Boilerplate/generate"><i class="fas fa-code-branch"></i>&nbsp;Use</a> this repository as template for your project.</p>
+        <p class="has-text-weight-medium"><a target="_blank" href="https://github.com/TanukiHQ/Tanuki-Node-Boilerplate/generate"><i class="fas fa-code-branch"></i>&nbsp;Use</a> this repository as template for your project.</p>
     </div>
 </section>
