--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,10 @@
-<section id="main-hero" class="hero is-black">
+<section id="main-hero" class="hero is-light">
     <div class="hero-body">
         <div class="container">
             <div class="column">
-                <h1 class="title">TanukiWorks Boilerplate</h1>
-                <p class="subtitle has-text-grey">Made with <span class="has-text-danger"><i
-                        class="fas fa-heart"></i></span> by <a class="has-text-grey-light"
+                <h1 class="title">TanukiHQ Boilerplate</h1>
+                <p class="subtitle has-text-dark">Made with <span class="has-text-danger"><i
+                        class="fas fa-heart"></i></span> by <a class="has-text-black has-text-weight-semibold"
                     href="https://github.com/TanukiHQ" target="_blank">TanukiHQ</a></p>
             </div>
         </div>
@@ -14,7 +14,7 @@
 <section class="section">
     <div class="container">
         <h1 class="title"><a target="_blank" href="https://github.com/TanukiHQ/Tanuki-Node-Boilerplate">Tanuki-Node-Boilerplate</a></h1>
-        <p>This repository is used for TanukiHQ and TanukiWorks projects. Now open-sourced!</p>
+        <p>This repository is used for TanukiHQ projects. Now open-sourced!</p>
         <p>Licensed under MPL-2.0. Check <code>LICENSE</code> for more information.</p>
         <br>
         <p class="has-text-weight-medium"><a target="_blank" href="https://github.com/TanukiHQ/Tanuki-Node-Boilerplate/generate"><i class="fas fa-code-branch"></i>&nbsp;Use</a> this repository as template for your project.</p>
